# Brisingr

./: .gitignore  README.md  discrete_log.py  pyproject.toml  wiener.py  wiener_attack.py
Utils/: numbers.py
brisingr/: wiener_attack.py
brisingr/Utils/: curves.py
brisingr/curves/: models.py
brisingr/knapsack/: merkle_hellman.py
brisingr/logarithm/: discrete_log.py
brisingr/prngs/: lcg.py  mersenne_twister.py
brisingr/rsa/: wiener_attack.py
brisingr/rsa_attacks/: attacks.py  attacks.sage  tests.py  wiener_attack.py
brisingr/symmetric/: caesar.py  tools.py  vigenere.py
brisingr/symmetric/block_cipher/: gcm_nonce_reuse.sage  gf2_utils.sage  padding_oracle_attack.py
brisingr/symmetric/block_cipher/padding-oracle/: padding_oracle_attack.py  tests.py
brisingr/symmetric/stream_cipher/: exclusion_table.py
cheatsheet/: cryptography.tex
cheatsheet/chapters/: RSA.tex  discrete.tex
docs/chapters/: background.tex  discrete.tex  factorization.tex
tests/: test_rsa_attacks.py
