[project]
name = "brisingr"
version = "0.0.1"
authors = [
    { name="Moorts" },
]
description = "Library containing implementations of different attacks on various cryptosystems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
